--- a/webb/templates/firstpage.html
+++ b/webb/templates/firstpage.html
@@ -22,9 +22,7 @@
         }
         /* Hero Section */
         .hero {
-            background-image: url("{{ url_for('static', filename='images/copyofVanguard.svg') }}");
-            background-size: cover;
-            background-position: center;
+            background-color: #000524;
             height: 100vh;
             display: flex;
             justify-content: center;
