--- a/webb/templates/dashboard.html
+++ b/webb/templates/dashboard.html
@@ -121,9 +121,9 @@
     <h1>Welcome, {{ user }}!</h1>
     <!-- Username placeholder from backend -->
     <p>Today is : <span id="current-date"></span></p>
-    {% if month and count %} 
+    {% if month and events %} 
         <p>The month with the most events is: <strong>{{ month }}</strong></p> 
-        <p>Total events in {{ month }}: <strong>{{ count }}</strong></p> 
+        <p>Total events in {{ month }}: <strong>{{ events }}</strong></p> 
     {% else %} 
         <p>No data available.</p> 
     {% endif %}
