--- a/webb/templates/dashboard.html
+++ b/webb/templates/dashboard.html
@@ -121,12 +121,16 @@
     <h1>Welcome, {{ user }}!</h1>
     <!-- Username placeholder from backend -->
     <p>Today is : <span id="current-date"></span></p>
-    {% if month and events %} 
-        <p>The month with the most events is: <strong>{{ month }}</strong></p> 
-        <p>Total events in {{ month }}: <strong>{{ events }}</strong></p> 
-    {% else %} 
-        <p>No data available.</p> 
-    {% endif %}
+    <div>
+      <p>Number of events: <strong>{{ num_events }}</strong></p>
+      {% if month and events %} 
+      <p>The month with the most events is: <strong>{{ month }}</strong></p> 
+      <p>Total events in {{ month }}: <strong>{{ events }}</strong></p> 
+      {% else %} 
+          <p>No data available.</p> 
+      {% endif %}
+    </div>
+
     <div class="container-dashboard">
       <!-- TABLE TUGAS KELAS -->
       <table>
