--- a/webb/templates/dashboard.html
+++ b/webb/templates/dashboard.html
@@ -119,6 +119,16 @@
   </div>
   <main class="main">
     <h1>Welcome, {{ user }}!</h1>
+    <div>
+      <p>Today is : <span id="current-date"></span></p>
+      <p>Number of events: <strong>{{ num_events }}</strong></p>
+      {% if month and events %} 
+      <p>The month with the most events is: <strong>{{ month }}</strong></p> 
+      <p>Total events in {{ month }}: <strong>{{ events }}</strong></p> 
+      {% else %} 
+          <p>No data available.</p> 
+      {% endif %}
+    </div>
     <!-- Username placeholder from backend -->
 
 
